PDCLFRM-0000 preparation for bulk release